# uposatha

./: .gitignore  Algorithm.md  CONTRIBUTING.md  LICENCE  README  README.md  pyproject.toml  test_output.txt  uposatha.py  uposatha_unit.py
benchmark/: calendar_benchmark.py
src/uposatha/: assemble.py  calendar.py  configure.py  elements.py  generate.py  query.py  seasons.py  sequence.py
tests/: conftest.py  test_assemble.py  test_calendar.py  test_generate.py  test_holidays.py  test_lookup.py  test_query.py  test_season_dates.py  test_seasons.py  test_sequence.py  test_uposatha_sequence.py
