[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uposatha"
version = "0.1.0"
authors = [
    {name = "Ajahn Jhanarato", email = "jhanrato@gmail.com"},
]
description = "API for the Thai Lunar Calendar"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/jhanarato/uposatha"
"Bug Tracker" = "https://github.com/jhanarato/uposatha/issues"

[tool.pytest.ini_options]
pythonpath = "src"